--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,4 @@
 <resources>
   <string name="app_name">Apprends à écrire</string>
-  <string name="title_activity_draw_text">DrawText</string>
-
-  <!-- TODO: Remove or change this placeholder text -->
-  <string name="hello_blank_fragment">Hello blank fragment</string>
+  <string name="preferences_file">Preferences</string>
 </resources>
